# ProjetoSimuladorSO

./: CMakeLists.txt  Makefile  README.md  format.sh  project.md  report.md  uncrustify.cfg
cfg/: constants.hpp
cmake/: Linter.cmake
include/: interface.hpp  memory.hpp  process.hpp  process_manager.hpp
src/lib/: interface.cpp  memory.cpp  process.cpp  process_manager.cpp
